haskell_toolchains = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)
haskell_toolchains.bindists(
    dist = {
        "linux_amd64": "deb12",
    },
    version = "9.12.2",
    # https://gitlab.haskell.org/ghc/ghc/-/wikis/GHC%20Status#all-released-ghc-versions
    # https://www.haskell.org/ghc/download_ghc_9_12_2.html#binaries
)
use_repo(
    haskell_toolchains,
    "all_bindist_toolchains",
)

register_toolchains(
    "@all_bindist_toolchains//:all",
)

stack_snapshot = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)
stack_snapshot.stack_snapshot_json(
    label = "//hs:stackage_snapshot.json",
)
stack_snapshot.snapshot(
    local_snapshot = "//hs:stackage_snapshot.yaml",
)
stack_snapshot.package(
    name = "ShellCheck",
    components = [
        "lib",
        "exe:shellcheck",
    ],
)
use_repo(
    stack_snapshot,
    "stackage",
    "stackage-exe",
    "stackage-unpinned",
)
