load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bzl/rules:al_unpack_archives.bzl", "al_unpack_archives")

pkg_tar(
    name = "themes-docsy",
    package_dir = "themes/docsy",
    deps = ["@com-github-google-docsy//:src-tar"],
)

al_unpack_archives(
    name = "themes",
    srcs = [":themes-docsy"],
)

alias(
    name = "hugo",
    actual = "@com_github_gohugoio_hugo//:hugo",
)
