http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_google_docsy",
    build_file = "//tools/bzl/build_files:general.BUILD.bazel",
    integrity = "sha256-MbHVtG665pokxgGMhXVv1uGmn4wbBayceBRtLvA7rzw=",
    patch_args = ["-p1"],
    patches = ["//third_party/github.com/google/docsy:001_autoprefixer_require.patch"],
    strip_prefix = "docsy-2cb372501b6cc15b5178681ff0c44030052457de",
    urls = ["https://github.com/google/docsy/archive/2cb372501b6cc15b5178681ff0c44030052457de.zip"],
)

http_archive(
    name = "com_github_fortawesome_font_awesome",
    build_file = "//tools/bzl/build_files:general.BUILD.bazel",
    integrity = "sha256-/evfPxuGQaS2ZcYfH0jkgrFAqBfOYZETVZIBuKH83VE=",
    strip_prefix = "Font-Awesome-6.7.2",
    urls = ["https://github.com/FortAwesome/Font-Awesome/archive/refs/tags/6.7.2.tar.gz"],
)

http_archive(
    name = "com_github_twbs_bootstrap",
    build_file = "//tools/bzl/build_files:general.BUILD.bazel",
    integrity = "sha256-+aoFaJvJEWrg7DDmkNTGkbzr+r+76075kiI5+Xpqs9k=",
    strip_prefix = "bootstrap-5.3.7",
    urls = ["https://github.com/twbs/bootstrap/archive/refs/tags/v5.3.7.tar.gz"],
)

register_toolchains("//tools/hugo:toolchain_remote_linux_amd64")
