load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")
load("//projects/al/rules/al:al_config.bzl", "al_config")
load("//tools/docs:defs.bzl", "docs_filegroup")

filegroup(
    name = "dnsconfig",
    srcs = [
        "//infra/flux:dnsconfig",
        "//infra/forgejo:dnsconfig",
        "//infra/harbor:dnsconfig",
        "//infra/mikrotik:dnsconfig",
        "//infra/pve:dnsconfig",
        "//infra/threexui:dnsconfig",
        "//infra/vault:dnsconfig",
        "//users:dnsconfig",
    ],
    visibility = ["//infra:__subpackages__"],
)

pkg_filegroup(
    name = "ansible_cfg",
    srcs = [":ansible_cfg_file"],
    visibility = ["//infra:__subpackages__"],
)

pkg_files(
    name = "ansible_cfg_file",
    srcs = ["ansible.cfg"],
)

al_config(
    name = "al",
    data = ["al_lib.lua"],
    visibility = ["//:__subpackages__"],
    deps = ["//:al"],
)

docs_filegroup(
    name = "docs",
    srcs = glob(["*.md"]),
    visibility = ["//:__pkg__"],
    deps = subpackages(
        include = ["*"],
        allow_empty = True,
    ),
)
