http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "com_github_argoproj_argo_cd_manifests_ha_install_yaml",
    downloaded_file_path = "install.yaml",
    integrity = "sha256-IlHyxKdvGlUfpY8leT2dfZQ1jEVHhx3z6QV9CLQROYI=",
    url = "https://raw.githubusercontent.com/argoproj/argo-cd/76162a93105a5cf01a10a3faa8203621b487a0c3/manifests/ha/install.yaml",
)
