load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@com_alwaldend_src_npm//:postcss-cli/package_json.bzl", postcss = "bin")
load("@com_alwaldend_src_npm//:prettier/package_json.bzl", prettier = "bin")
load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

prettier.prettier_binary(
    name = "prettier",
    visibility = ["//visibility:public"],
)

postcss.postcss_binary(
    name = "postcss",
    data = ["//:node_modules/autoprefixer"],
    visibility = ["//visibility:public"],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
