load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.9",
    jvm_target = "1.8",
    language_version = "1.9",
)

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
