load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_perl//perl:perl_binary.bzl", "perl_binary")

write_file(
    name = "carton-script",
    out = "carton-script.pl",
    content = [
        "use strict;",
        "use Carton::CLI;",
        "exit Carton::CLI->new->run(@ARGV);",
    ],
)

perl_binary(
    name = "carton",
    srcs = [":carton-script"],
    deps = ["@com-alwaldend-src-cpan//:Carton"],
)
