load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_perl//perl:perl_binary.bzl", "perl_binary")
load("@rules_perl//perl/cpan:cpan_compiler.bzl", "cpan_compiler")
load("//bzl/macros:al_readme.bzl", "al_readme")

cpan_compiler(
    name = "cpan-lock",
    cpanfile = ":cpanfile",
    lockfile = ":cpanfile.snapshot.lock.json",
)

write_file(
    name = "carton-script",
    out = "carton-script.pl",
    content = [
        "use strict;",
        "use Carton::CLI;",
        "exit Carton::CLI->new->run(@ARGV);",
    ],
)

perl_binary(
    name = "carton",
    srcs = [":carton-script"],
    visibility = ["//visibility:public"],
    deps = ["@com-alwaldend-src-cpan//:Carton"],
)

al_readme(
    name = "readme",
)
