bazel_dep(name = "rules_perl", version = "0.4.2")

perl_repositories = use_extension("@rules_perl//perl:extensions.bzl", "perl_repositories")

cpan = use_extension("@rules_perl//perl/cpan:extensions.bzl", "cpan")
cpan.install(
    name = "com_alwaldend_src_cpan",
    lock = "//pl/tools:cpanfile.snapshot.lock.json",
)

register_toolchains(
    "@rules_perl//perl:perl_darwin_arm64_toolchain",
    "@rules_perl//perl:perl_darwin_amd64_toolchain",
    "@rules_perl//perl:perl_linux_amd64_toolchain",
    "@rules_perl//perl:perl_linux_arm64_toolchain",
    "@rules_perl//perl:perl_windows_x86_64_toolchain",
)

use_repo(
    perl_repositories,
    "perl_darwin_amd64",
    "perl_darwin_arm64",
    "perl_linux_amd64",
    "perl_linux_arm64",
    "perl_windows_x86_64",
)

use_repo(cpan, "com_alwaldend_src_cpan")
