load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("//tools/release/main/bzl:al_release_binary.bzl", "al_release_binary")

al_release_binary(
    name = "deploy_heads",
    srcs = [
        "//projects/{}/releases:head".format(package)
        for package in subpackages(
            include = ["*"],
            exclude = [
                "xray_manager",
                "cgit",
                "alwaldend.com",
                "ansible_collection",
                "bazel_registry",
                "useless_qt_gui",
                "rules_template",
                "rules_binary_toolchain",
            ],
        )
    ] + [],
)

pkg_filegroup(
    name = "docs",
    srcs = [":docs_files"] + [
        "//projects/{}:docs".format(package)
        for package in subpackages(
            include = ["*"],
            exclude = [
                "xray_manager",
                "cgit",
                "rules_template",
                "rules_binary_toolchain",
            ],
        )
    ] + [
        "@rules_binary_toolchain//:docs",
        "@rules_template//:docs",
    ],
    visibility = ["//:__pkg__"],
)

pkg_files(
    name = "docs_files",
    srcs = glob(["*.md"]),
    prefix = "content/docs/{}".format(package_name()),
)
