load("//tools/docs:defs.bzl", "docs_filegroup")
load("//tools/release/main/bzl:al_release_binary.bzl", "al_release_binary")

docs_filegroup(
    name = "docs",
    srcs = glob(["*.md"]),
    visibility = ["//:__pkg__"],
    deps = subpackages(
        include = ["*"],
        allow_empty = True,
        exclude = ["rules_*"],
    ) + [
        "@rules_binary_toolchain//:docs",
        "@rules_template//:docs",
    ],
)

al_release_binary(
    name = "deploy_heads",
    srcs = [
        "//projects/{}/releases:head".format(package)
        for package in subpackages(
            include = ["*"],
            exclude = [
                "xray_manager",
                "cgit",
                "alwaldend.com",
                "ansible_collection",
                "bazel_registry",
                "useless_qt_gui",
                "rules_template",
                "rules_binary_toolchain",
            ],
        )
    ] + [],
)
