load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("//bzl/macros:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/macros:al_readme.bzl", "al_readme")

PACKAGES = {
    "isort": {},
    "mypy": {},
    "black": {},
    "flake8": {"deps": ["@com-alwaldend-src-pip//flake8_pyproject:pkg"]},
    "git-filter-repo": {},
}

[
    py_console_script_binary(
        name = package,
        pkg = "@com-alwaldend-src-pip//{}:pkg".format(package.replace("-", "_")),
        visibility = ["//visibility:public"],
        deps = kwargs.get("deps", []),
    )
    for package, kwargs in PACKAGES.items()
]

compile_pip_requirements(
    name = "requirements",
    srcs = ["//:pyproject"],
    requirements_txt = ":requirements.txt",
)

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_bzl_target_doc(
    name = "bzl-target-doc",
    visibility = ["//visibility:public"],
)
