load("@com_alwaldend_src_pip//:requirements.bzl", "all_whl_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")
load("//tools/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")

al_git_changelog(
    name = "changelog",
    visibility = ["//:__subpackages__"],
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "com_alwaldend_src_pip",
    requirements = "//py/tools:requirements.txt",
)

modules_mapping(
    name = "modules_map",
    include_stub_packages = True,
    wheels = all_whl_requirements,
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//:__subpackages__"],
)
